--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "todo16v2",
+  "name": "productivity-app",
+  "homepage": "https://baby0ne.github.io/productivity-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -31,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
