--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "productivity-app",
-  "homepage": "https://baby0ne.github.io/productivity-app",
+  "homepage": "https://productivity-c0xuuvcs3-baby0ne.vercel.app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
